--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "📶 𝘽𝙡𝙪𝙚 𝙇𝙞𝙤𝙣𝙚 📶",
+  "name": "❣️ 𝙽𝙸𝚁𝚄𝚂𝙷𝙰 ❣️",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/Nipuna-apps/Blue-Lione-Bot",
   "logo": "https://i.ibb.co/fdVNVby/337211b6aaa25af5dc698da9e41691a0.jpg",
